--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,15 @@
       <scope>provided</scope>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+    <!-- Чтобы применить валидацию на данные в html форме -->
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.1.6.Final</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
